main.tf
provider "aws" {
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
  region     = var.aws_region
}
#######################################################
################### Start - AWS VPC ###################
#######################################################
data "aws_availability_zones" "available" {
}

resource "aws_vpc" "windfire-vpc" {
  cidr_block           = var.cidr["vpc"]
  instance_tenancy     = var.instanceTenancy
  enable_dns_support   = var.dnsSupport
  enable_dns_hostnames = var.dnsHostNames
  tags = {
    Name = var.vpc
  }
}

# Create Internet Facing Frontend ALB
resource "aws_lb" "windfire-frontend-alb" {
  name               = "windfire-frontend-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.windfire-frontend-alb-sg.id]
  subnets            = aws_subnet.windfire-frontend-subnet.*.id
  tags = {
    Environment = "production"
  }
}

# ALB Configuration for Frontend Target Group
resource "aws_lb_listener" "windfire-frontend-listener" {
  load_balancer_arn = aws_lb.windfire-frontend-alb.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.windfire-frontend-tg.arn
  }
}

resource "aws_lb_target_group" "windfire-frontend-tg" {
  name     = "windfire-frontend-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.windfire-vpc.id
}

resource "aws_lb_target_group_attachment" "windfire-frontend-tg_attach" {
  count            = var.azs
  target_group_arn = aws_lb_target_group.windfire-frontend-tg.arn
  target_id        = element(aws_instance.windfire-web.*.id, count.index)
  port             = 80
}

# Create Internet Facing Backend ALB
resource "aws_lb" "windfire-backend-alb" {
  name               = "windfire-backend-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.windfire-backend-alb-sg.id]
  subnets            = aws_subnet.windfire-backend-subnet.*.id
  tags = {
    Environment = "production"
  }
}

# ALB Configuration for Backend Target Group
resource "aws_lb_listener" "windfire-backend-listener" {
  load_balancer_arn = aws_lb.windfire-backend-alb.arn
  port              = "8082"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.windfire-backend-tg.arn
  }
}

resource "aws_lb_target_group" "windfire-backend-tg" {
  name     = "windfire-backend-tg"
  port     = 8082
  protocol = "HTTP"
  vpc_id   = aws_vpc.windfire-vpc.id
}

resource "aws_lb_target_group_attachment" "windfire-backend-tg_attach" {
  count            = var.azs
  target_group_arn = aws_lb_target_group.windfire-backend-tg.arn
  target_id        = element(aws_instance.windfire-backend.*.id, count.index)
  port             = 8082
}

# Create Internet Gateway
resource "aws_internet_gateway" "windfire-igw" {
  vpc_id = aws_vpc.windfire-vpc.id
  tags = {
    Name = var.internet-gateway
  }
}

# Create Route Tables
resource "aws_route_table" "windfire-public-route" {
  vpc_id = aws_vpc.windfire-vpc.id
  tags = {
    Name = var.routetable["public"]
  }
}

# Create Internet route access
resource "aws_route" "windfire-internet-route" {
  route_table_id         = aws_route_table.windfire-public-route.id
  destination_cidr_block = var.allIPsCIDRblock
  gateway_id             = aws_internet_gateway.windfire-igw.id
}

# Create Subnets
resource "aws_subnet" "windfire-frontend-subnet" {
  count                   = var.azs
  vpc_id                  = aws_vpc.windfire-vpc.id
  cidr_block              = "10.0.${20 + count.index}.0/24"
  map_public_ip_on_launch = var.mapPublicIP
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = var.subnet["frontend"]
  }
}

resource "aws_subnet" "windfire-backend-subnet" {
  count                   = var.azs
  vpc_id                  = aws_vpc.windfire-vpc.id
  cidr_block              = "10.0.${30 + count.index}.0/24"
  map_public_ip_on_launch = var.mapPublicIP
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = var.subnet["backend"]
  }
}

resource "aws_subnet" "windfire-bastion-subnet" {
  vpc_id                  = aws_vpc.windfire-vpc.id
  cidr_block              = var.cidr["bastion"]
  map_public_ip_on_launch = var.mapPublicIP
  availability_zone       = var.availabilityZone
  tags = {
    Name = var.subnet["bastion"]
  }
}

# Create Network Access Control Lists
resource "aws_network_acl" "windfire-frontend-acl" {
  vpc_id     = aws_vpc.windfire-vpc.id
  subnet_ids = aws_subnet.windfire-frontend-subnet.*.id

  # allow ingress ephemeral ports from all IPs
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 0
    to_port    = 65535
  }

  # allow egress ephemeral ports to all IPs
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 0
    to_port    = 65535
  }
  tags = {
    Name = var.acl["public"]
  }
}

resource "aws_network_acl" "windfire-backend-acl" {
  vpc_id     = aws_vpc.windfire-vpc.id
  subnet_ids = aws_subnet.windfire-backend-subnet.*.id

  # allow ingress ephemeral ports from all IPs
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 0
    to_port    = 65535
  }

  # allow egress ephemeral ports to all IPs
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 0
    to_port    = 65535
  }
  tags = {
    Name = var.acl["private"]
  }
}

resource "aws_network_acl" "windfire-bastion-acl" {
  vpc_id     = aws_vpc.windfire-vpc.id
  subnet_ids = [aws_subnet.windfire-bastion-subnet.id]

  # allow ingress SSH port 22 from all IPs
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 22
    to_port    = 22
  }

  # allow ingress ephemeral ports from VPC subnet IPs
  ingress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = var.cidr["vpc"]
    from_port  = 1024
    to_port    = 65535
  }

  # allow egress ephemeral ports to all IPs
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.allIPsCIDRblock
    from_port  = 0
    to_port    = 65535
  }
  tags = {
    Name = var.acl["bastion"]
  }
}

# Create Security Groups
resource "aws_security_group" "windfire-frontend-alb-sg" {
  vpc_id = aws_vpc.windfire-vpc.id

  # allow ingress HTTP port 80 from all IPs
  ingress {
    cidr_blocks = [var.allIPsCIDRblock]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  # allow ingress HTTPS port 443 from all IPs
  ingress {
    cidr_blocks = [var.allIPsCIDRblock]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  # allow egress HTTP port 80 to VPC CIDR
  egress {
    cidr_blocks = [var.cidr["vpc"]]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  # allow egress HTTPS port 443 to VPC CIDR
  egress {
    cidr_blocks = [var.cidr["vpc"]]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  tags = {
    Name = var.security-group["frontend-alb"]
  }
}

resource "aws_security_group" "windfire-backend-alb-sg" {
  vpc_id = aws_vpc.windfire-vpc.id

  # allow ingress HTTP port 8082 from all IPs
  ingress {
    cidr_blocks = [var.allIPsCIDRblock]
    from_port   = 8082
    to_port     = 8082
    protocol    = "tcp"
  }

  # allow egress HTTP port 8082 to VPC CIDR
  egress {
    cidr_blocks = [var.cidr["vpc"]]
    from_port   = 8082
    to_port     = 8082
    protocol    = "tcp"
  }
  tags = {
    Name = var.security-group["backend-alb"]
  }
}

resource "aws_security_group" "windfire-frontend-sg" {
  vpc_id = aws_vpc.windfire-vpc.id

  # allow ingress HTTP port 80 from ALB Security Group
  ingress {
    security_groups = [aws_security_group.windfire-frontend-alb-sg.id]
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
  }

  # allow ingress HTTPS port 443 from ALB Security Group
  ingress {
    security_groups = [aws_security_group.windfire-frontend-alb-sg.id]
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
  }

  # allow ingress SSH port 22 from Bastion host subnet IPs
  ingress {
    cidr_blocks = [var.cidr["bastion"]]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # allow egress ephemeral ports to all IPs
  egress {
    cidr_blocks = [var.allIPsCIDRblock]
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
  }
  tags = {
    Name = var.security-group["frontend"]
  }
}

resource "aws_security_group" "windfire-backend-sg" {
  vpc_id = aws_vpc.windfire-vpc.id

  # allow ingress HTTP port 8082 from ALB Security Group
  ingress {
    security_groups = [aws_security_group.windfire-backend-alb-sg.id]
    from_port       = 8082
    to_port         = 8082
    protocol        = "tcp"
  }

  # allow ingress SSH port 22 from Bastion host subnet IPs
  ingress {
    cidr_blocks = [var.cidr["bastion"]]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # allow egress ephemeral ports to all IPs
  egress {
    cidr_blocks = [var.allIPsCIDRblock]
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
  }
  tags = {
    Name = var.security-group["backend"]
  }
}

resource "aws_security_group" "windfire-bastion-sg" {
  vpc_id = aws_vpc.windfire-vpc.id

  # allow ingress SSH port 22 from all IPs
  ingress {
    cidr_blocks = [var.source_ip]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # allow egress SSH port 22 to Frontend Security Group
  egress {
    security_groups = [aws_security_group.windfire-frontend-sg.id]
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
  }

  # allow egress SSH port 22 to Backend Security Group
  egress {
    security_groups = [aws_security_group.windfire-backend-sg.id]
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
  }
  tags = {
    Name = var.security-group["bastion"]
  }
}

# Associate Route Tables with Subnets
resource "aws_route_table_association" "windfire-bastion-association" {
  subnet_id      = aws_subnet.windfire-bastion-subnet.id
  route_table_id = aws_route_table.windfire-public-route.id
}

resource "aws_route_table_association" "windfire-frontend-association" {
  count          = var.azs
  subnet_id      = element(aws_subnet.windfire-frontend-subnet.*.id, count.index)
  route_table_id = aws_route_table.windfire-public-route.id
}

resource "aws_route_table_association" "windfire-backend-association" {
  count          = var.azs
  subnet_id      = element(aws_subnet.windfire-backend-subnet.*.id, count.index)
  route_table_id = aws_route_table.windfire-public-route.id
}

#####################################################
################### End - AWS VPC ###################
#####################################################
#######################################################
################### Start - AWS EC2 ###################
#######################################################
resource "aws_instance" "windfire-web" {
  count           = var.azs
  ami             = var.ami
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.windfire-frontend-sg.id]
  subnet_id       = element(aws_subnet.windfire-frontend-subnet.*.id, count.index)
  key_name        = var.key_name

  # Run install-httpd.sh script, provided in scripts sub-folder, at EC2 instance launch time
  user_data = file("scripts/install-httpd.sh")
  tags = {
    Name = "Web Server"
    Role = "frontend"
  }
}

resource "aws_instance" "windfire-backend" {
  count           = var.azs
  ami             = var.ami
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.windfire-backend-sg.id]
  subnet_id       = element(aws_subnet.windfire-backend-subnet.*.id, count.index)
  key_name        = var.key_name

  # Run install-node.sh script, provided in scripts sub-folder, at EC2 instance launch time
  user_data = file("scripts/install-node.sh")
  tags = {
    Name = "Backend Server"
    Role = "backend"
  }
}

resource "aws_instance" "bastion" {
  ami             = var.ami
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.windfire-bastion-sg.id]
  subnet_id       = aws_subnet.windfire-bastion-subnet.id
  key_name        = var.key_name
  tags = {
    Name = "Bastion Host"
    Role = "bastion"
  }
}
#####################################################
################### End - AWS EC2 ###################
#####################################################
/*resource "aws_key_pair" "windfire-keypair" {
  key_name   = "${var.keypair["key_name"]}"
  public_key = "${file("${var.keypair["publickey"]}")}"
}*/
